# LinguaGacha

./: .gitignore  00_开发.bat  AGENTS.md  DESIGN.md  PLAN.md  README.md  README_EN.md  README_ID.md  README_JA.md  README_JP.md  app.py  components.json  package.json  pyproject.toml  requirements.txt  step.md  test_gui.py  tsconfig.json  tsconfig.node.json  tsconfig.renderer.json  updater.py  version.txt
api/: SPEC.md  __init__.py
base/: Base.py  BaseBrand.py  BaseData.py  BaseIcon.py  BaseLanguage.py  BasePage.py  BasePath.py  CLIManager.py  EventManager.py  LogManager.py  VersionManager.py
buildtools/: brand.py  build_core.py  build_exe.py  check-backend-boundaries.mjs  check-frontend-boundaries.mjs  check-renderer-design-system.mjs  core_build.py  core_stage.py  format-related-files.mjs  generate_base_icon.py  generate_deps.py  glossary_overlap.py  mock_llm_api_server.py  verify_async_pipeline.py  verify_base_icon.py  verify_task_limiter.py
design/: main.pen
docs/: API.md  ARCHITECTURE.md  BACKEND.md  CLI.md  DATA.md  DESIGN.md  DOCS.md  ELECTRON_GUILD.md  FRONTEND.md  WORKFLOW.md  result_fixer_retry_optimization.md
frontend/: .gitignore  AppFluentWindow.py  AppSettingsPage.py  BaseNavigationItem.py  EmptyPage.py  ProjectPage.py  ProofreadingPage.py  SPEC.md  TaskPage.py  TranslationPage.py  WorkbenchPage.py  core-api-port-candidates.json  electron-builder.json5  electron.vite.config.ts  eslint.config.js  package.json  tsconfig.json  tsconfig.node.json  vitest.config.ts
frontend-vite/: .eslintrc.cjs  .gitignore  SPEC.md  components.json  electron.vite.config.ts  eslint.config.js  index.html  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.ts
model/: Item.py  Model.py  ModelManager.py  Project.py
module/: AppConfig.py  CacheManager.py  ChunkGenerator.py  CodeSaver.py  Config.py  DataAccessLayer.py  ExpertConfig.py  FileHelper.py  ModelManager.py  Normalizer.py  ProgressBar.py  ProjectConfig.py  ProjectCreator.py  PromptBuilder.py  PromptPathResolver.py  PunctuationFixer.py  QualityRuleManager.py  ResultChecker.py  RubyCleaner.py  SessionContext.py  TableManager.py  TextPreserver.py  TextProcessor.py  VersionManager.py  XLSXHelper.py
resource/: expert_config.json  icon.icns  lucide_icons.rcc  preset_google_template.json  preset_models.json  pyinstaller.py
src/: electron-env.d.ts  index.test.ts  index.ts
tests/: conftest.py  test_app.py  test_cli_manager.py  test_log_manager.py
widget/: ComboBoxCard.py  CommandBarCard.py  CustomLineEdit.py  CustomTextEdit.py  DashboardCard.py  EmptyCard.py  FlowCard.py  GroupCard.py  LineEditCard.py  LineEditMessageBox.py  MenuButtonCard.py  ProgressToast.py  PushButtonCard.py  RuleWidget.py  SearchCard.py  Separator.py  SettingCard.py  SpinCard.py  (+5 more)
(+3788 files in other folders)
