[project]
name = "linguagacha"
version = "0.56.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    # System
    "PyQt-Fluent-Widgets[full]",
    "openai",
    "anthropic",
    "google-genai",
    "httpx",
    "tiktoken",

    # Tools
    "rich",
    "opencc_pyo3",
    "openpyxl",
    "orjson",
    "json-repair",
    "lxml",
    "beautifulsoup4",
    "charset-normalizer",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pyfakefs",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=module --cov-branch --cov-report=term-missing"

[tool.coverage.run]
data_file = "tests/.coverage"

[tool.uv]
override-dependencies = [
    "pyqt5-qt5==5.15.18; sys_platform != 'win32'",
    "pyqt5-qt5==5.15.2; sys_platform == 'win32'",
]

[tool.ruff]
force-exclude = true        # 强制应用排除规则
extend-exclude = [
    "module/Localizer/",
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
force-single-line = true
