[project]
name = "linguagacha"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    # System
    "openai",
    "anthropic",
    "google-genai",
    "httpx",
    "tiktoken",

    # Tools
    "openpyxl",
    "orjson",
    "json-repair",
    "lxml",
    "beautifulsoup4",
    "charset-normalizer",
]

[project.optional-dependencies]
build = [
    "pyinstaller",
]
test = [
    "pytest",
    "pytest-cov",
    "pyfakefs",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=module --cov-branch --cov-report=term-missing"

[tool.coverage.run]
data_file = "tests/.coverage"

[tool.ruff]
force-exclude = true
extend-exclude = [
    "module/Localizer/",
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
force-single-line = true
